refac: create sam subtopic

--- a/sam/graal-sam/EchoFunction/Makefile
+++ b/sam/graal-sam/EchoFunction/Makefile
@@ -1,5 +1,4 @@
 build-EchoFunction:
 	mvn clean package -Pnative 2>&1
 	mvn failsafe:integration-test 1>&2
-	unzip ./target/function.zip -d target
-	cp ./target/bootstrap $(ARTIFACTS_DIR)
+	unzip target/function.zip -d $(ARTIFACTS_DIR)
